--- a/SoundLove/SoundLove/Info.plist
+++ b/SoundLove/SoundLove/Info.plist
@@ -34,6 +34,9 @@
 	<array>
 		<string>Montserrat-Bold.ttf</string>
 		<string>Montserrat-Regular.ttf</string>
+		<string>Montserrat-Black.otf</string>
+		<string>Montserrat-Hairline.otf</string>
+		<string>Montserrat-Light.otf</string>
 	</array>
 	<key>UISupportedInterfaceOrientations</key>
 	<array>
