--- a/SoundLove/SoundLove/Info.plist
+++ b/SoundLove/SoundLove/Info.plist
@@ -53,6 +53,8 @@
 	</array>
 	<key>UIStatusBarHidden</key>
 	<true/>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>The application will use your GPS to determine your location.</string>
 	<key>UISupportedInterfaceOrientations</key>
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
